Fix gulp errors and add header layout

--- a/app/catalog/view/theme/fancy.shop/sass/header/header.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/header/header.sass
@@ -1,3 +1,16 @@
 .header
-  height: 60px 
-  background: gray
+  height: 60px
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.08)
+
+.header__cont
+  width: 1440px
+  height: 100%
+  margin: auto
+  display: flex
+  justify-content: space-between
+  align-items: center
+
+@import __phone-icon/header__phone-icon
+@import __phone/header__phone
+@import __search/header__search
+@import __nav/header__nav
