Made products slider

--- a/app/catalog/view/theme/fancy.shop/sass/stylesheet.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/stylesheet.sass
@@ -380,5 +380,5 @@ template
 @import common/btn-search/btn-search
 
 @import common/header/header
-@import common/popular/popular
+@import common/products/products
 @import home/home
