--- a/app/catalog/view/theme/fancy.shop/sass/variables.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/variables.sass
@@ -1,8 +1,15 @@
 $main: #FF2012
 $yellow: #FCFF6B
+$green: #00E369
+$blue: #0072FF
+$pink: #FF0f7E
 $black: #424242
 $dark-gray: #7D7D7D
 $light-gray: #BBBBBB
+$star: #FFA901
 
 .accent-text
   color: #FF2012
+
+.green
+  background-color: $green !important
