--- a/app/catalog/view/theme/fancy.shop/template/common/home.twig
+++ b/app/catalog/view/theme/fancy.shop/template/common/home.twig
@@ -189,49 +189,380 @@
         </a>
       </div>
 
-      <div class="popular swiper-container s3">
-        <div class="swiper-wrapper">
-          <div class="product-item swiper-slide">
-            <a class="product-item__img-cont">
-              <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/baby-carriage.jpg" alt="">
-            </a>
-            <h3 class="product-item__title">Bartollino Adbor</h3>
-            <span class="product-item__price">16 500 Р.</span>
-            <button class="product-item__btn btn">в корзину</button>
-          </div>
-          <div class="product-item swiper-slide">
-            <a class="product-item__img-cont">
-              <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/soft-toy.jpg" alt="">
-            </a>
-            <h3 class="product-item__title">Игрушка "Как приручить дракона 3"</h3>
-            <span class="product-item__price">2 000 Р.</span>
-            <button class="product-item__btn btn">в корзину</button>
-          </div>
-          <div class="product-item swiper-slide">
-            <a class="product-item__img-cont">
-              <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/baby-seat.jpg" alt="">
-            </a>
-            <h3 class="product-item__title">Автокресло</h3>
-            <span class="product-item__price">2 000 Р.</span>
-            <button class="product-item__btn btn">в корзину</button>
-          </div>
-          <div class="product-item swiper-slide">
-            <a class="product-item__img-cont">
-              <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/baby-carriage.jpg" alt="">
-            </a>
-            <h3 class="product-item__title">Bartollino Adbor</h3>
-            <span class="product-item__price">2 000 Р.</span>
-            <button class="product-item__btn btn">в корзину</button>
-          </div>
-          <div class="product-item swiper-slide">
-            <a class="product-item__img-cont">
-              <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/xiaomi-mi-band-4.jpg" alt="">
-            </a>
-            <h3 class="product-item__title">Xiaomi Mi Band 4</h3>
-            <span class="product-item__price">4 000 Р.</span>
-            <button class="product-item__btn btn">в корзину</button>
+      <div class="products">
+        <div class="swiper-container s3">
+          <h2 class="products__title">Покупатели выбирают</h2>
+
+          <div class="swiper-wrapper">
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span>
+                  -20%
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/baby-carriage.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Bartollino Adbor</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="product-item__price">
+                <span class="product-item__price-current">16 500 Р.</span>
+                <span class="product-item__price-prev">16 500 Р.</span>
+              </div>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span class="green">
+                  любимая игрушка
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/soft-toy.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Игрушка "Как приручить дракона 3"</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <span class="product-item__price">2 000 Р.</span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/baby-seat.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Автокресло</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <span class="product-item__price">2 000 Р.</span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/lego-city.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Конструктор Lego City</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <span class="product-item__price">9 475 Р.</span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span>
+                  Хит
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/xiaomi-mi-band-4.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Xiaomi Mi Band 4</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <span class="product-item__price">4 000 Р.</span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
           </div>
         </div>
+
+        <div class="popular__btn-prev swiper-button-prev fas"></div>
+        <div class="popular__btn-next swiper-button-next fas"></div>
+      </div>
+
+      <div class="products">
+        <div class="swiper-container s4">
+          <h2 class="products__title">Новинки мира электроники</h2>
+          <div class="swiper-wrapper">
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span>
+                  -15%
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/new/air-pods-2.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Apple AirPods 2</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="product-item__price">
+                <span class="product-item__price-current">10 990 Р.</span>
+                <span class="product-item__price-prev">11 200 Р.</span>
+              </div>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span class="green">
+                  -5%
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/new/huawei-p30-pro.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Смартфон Huawei P30 Pro</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <div class="product-item__price">
+                <span class="product-item__price-current">59 990 Р.</span>
+                <span class="product-item__price-prev">61 000 Р.</span>
+              </div>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/new/mackbook-air-2019.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Apple MacBook Air (2019)</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <span class="product-item__price">68 220 Р.</span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span class="green">
+                  -24%
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/new/xiaomi-mi9.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Смартфон Xiaomi Mi 9</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="product-item__price">
+                <span class="product-item__price-current">24 990 Р.</span>
+                <span class="product-item__price-prev">32 000</span>
+              </div>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span>
+                  Хит
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/xiaomi-mi-band-4.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Xiaomi Mi Band 4</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <span class="product-item__price">4 000 Р.</span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span>
+                  Хит
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/new/iphone-11.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Смартфон Apple Iphone 11 Pro</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <span class="product-item__price">89 990 Р.</span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="new__btn-prev swiper-button-prev fas"></div>
+        <div class="new__btn-next swiper-button-next fas"></div>
+      </div>
+
+      <div class="products">
+        <div class="swiper-container s5">
+          <h2 class="products__title">Для мам и детей</h2>
+          <div class="swiper-wrapper">
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span>
+                  3 в 1
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/for-moms/product-img-01.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Коляска Adamex Barletta 2 в 1</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <span class="product-item__price">
+                24 200 Р.
+              </span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span class="green">
+                  -5%
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/for-moms/product-img-03.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Пуховик для девочки GXF</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <div class="product-item__price">
+                <span class="product-item__price-current">2 400 Р.</span>
+                <span class="product-item__price-prev">2 500 Р.</span>
+              </div>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/for-moms/product-img-02.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Коляска-трость Peg Perego Pliko Min</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <span class="product-item__price">12 600 Р.</span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/for-moms/product-img-04.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Кроватка детская</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <span class="product-item__price">
+                2 400 Р.
+              </span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+
+            <div class="product-item swiper-slide">
+              <div class="product-item__tag">
+                <span class="green">
+                  2 в 1
+                  <div class="flag"></div>
+                </span>
+              </div>
+              <a class="product-item__img-cont">
+                <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/for-moms/product-img-05.jpg" alt="">
+              </a>
+              <h3 class="product-item__title">Коляска 2 в 1 Noordi Fjordi</h3>
+              <div class="product-item__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <span class="product-item__price">
+                36 400 Р.
+              </span>
+              <button class="product-item__btn btn">в корзину</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="for-moms__btn-prev swiper-button-prev fas"></div>
+        <div class="for-moms__btn-next swiper-button-next fas"></div>
       </div>
     </div>
   </main>
