Did hover navigation function for product-items

--- a/app/catalog/view/theme/fancy.shop/sass/home/advantages/advantages.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/home/advantages/advantages.sass
@@ -62,20 +62,20 @@
     color: $light-gray
     font-size: 70px
 
-.advantage__title
-  margin: 10px 0 18px 0
-  color: $black
-  font-size: 24px
-  font-family: "CeraRoundPro-bold"
-  text-transform: uppercase
-  letter-spacing: 0.1em
-  &--gradient
-    display: table
-    background: linear-gradient(90deg, #FF2012 26.56%, #FFB800 100%)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
+  &__title
+    margin: 10px 0 18px 0
+    color: $black
+    font-size: 24px
+    font-family: "CeraRoundPro-bold"
+    text-transform: uppercase
+    letter-spacing: 0.1em
+    &--gradient
+      display: table
+      background: linear-gradient(90deg, #FF2012 26.56%, #FFB800 100%)
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
 
-.advantage__p
-  margin: 0
-  color: $dark-gray
-  line-height: 20px
+  &__p
+    margin: 0
+    color: $dark-gray
+    line-height: 20px
