--- a/app/catalog/view/theme/fancy.shop/sass/common/header/header.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/common/header/header.sass
@@ -13,48 +13,154 @@
   @media (max-width: 599px)
     height: 48px
 
+  &__cont
+    width: 1320px
+    height: 100%
+    margin: auto
+    display: flex
+    justify-content: space-between
+    align-items: center
+    box-sizing: border-box
+    @media (max-width: 1399px)
+      width: 100%
+      padding: 0 20px
+    @media (max-width: 599px)
+      padding: 0 16px
 
-.header__cont
-  width: 1320px
-  height: 100%
-  margin: auto
-  display: flex
-  justify-content: space-between
-  align-items: center
-  box-sizing: border-box
-  @media (max-width: 1399px)
-    width: 100%
-    padding: 0 20px
-  @media (max-width: 599px)
-    padding: 0 16px
+  &__logo
+    display: flex
+    align-items: center
+    @media (max-width: 1099px)
+      margin: 0 auto 0 20px
+      order: 2
+    @media (max-width: 599px)
+      margin: 0 auto 0 16px
+      img
+        width: 80%
 
+  &__phone-icon
+    position: relative
+    transition: .3s
+    .arrow
+      right: 3px
+      top: 3px
+      position: absolute
+    @media (max-width: 1269px)
+      transform: scale(.8)
+      .arrow, .phone
+        path
+          fill: #FFF
+          stroke: #FFF
 
-.header__logo
-  display: flex
-  align-items: center
-  @media (max-width: 1099px)
-    margin: 0 auto 0 20px
-    order: 2
-  @media (max-width: 599px)
-    margin: 0 auto 0 16px
-    img
-      width: 80%
+  &__phone
+    display: flex
+    align-items: center
+    cursor: pointer
+    &:hover
+      .arrow
+        animation: phone-anim ease-in-out .3s
+      .accent-text
+        color: darken($main, 10%)
+        border-bottom: 2px dotted darken($main, 10%)
+    @media (max-width: 1269px)
+      width: 34px
+      height: 34px
+      display: flex
+      align-items: center
+      justify-content: center
+      background: $main
+      border-radius: 100%
+    @media (max-width: 1099px)
+      margin: 0 24px 0 0
+      order: 3
+    @media (max-width: 599px)
+      margin: 0
+    &__num
+      margin: 0 0 0 5px
+      span
+        width: 100%
+        display: block
+        font-weight: 600
+        font-size: 0.938rem
+        color: #424242
+      .accent-text
+        width: auto
+        display: inline-block
+        border-bottom: 2px dotted $main
+        color: #FF2012
+      @media (max-width: 1269px)
+        display: none
 
+  &__search
+    width: 40%
+    display: flex
+    &--mobile
+      display: none
+    @media (max-width: 1099px)
+      display: none
+      &--mobile
+        width: 100%
+        height: 35px
+        display: flex
+    @media (max-width: 599px)
+      &--mobile
+        height: 30px
+    &__input
+      width: 100%
+      height: 32px
+      padding: 0 15px
+      font-size: 0.938rem
+      border-radius: 20px
+      border: 1px solid #E2E2E2
+      border-top-right-radius: 0
+      border-bottom-right-radius: 0
+      background: #FDFDFD
+      box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.1)
+      box-sizing: border-box
+      outline: none
+      transition: .3s
+      &:hover
+        border: 2px solid #E2E2E2
+      &:focus
+        border: 2px solid $main
+      @media (max-width: 1099px)
+        height: 100%
 
-.header__phone-icon
-  position: relative
-  transition: .3s
-  .arrow
-    right: 3px
-    top: 3px
-    position: absolute
-  @media (max-width: 1269px)
-    transform: scale(.8)
-    .arrow, .phone
-      path
-        fill: #FFF
-        stroke: #FFF
-
+  &__nav
+    min-width: 200px
+    display: flex
+    justify-content: space-between
+    @media (max-width: 1099px)
+      min-width: auto
+      order: 4
+    @media (max-width: 599px)
+      display: none
+    &__item
+      display: flex
+      align-items: center
+      justify-content: flex-end
+      flex-direction: column
+      cursor: pointer
+      transition: .3s
+      i
+        color: $black
+        font-size: 26px
+        transition: .2s
+      &:hover
+        color: $main
+        i
+          color: $main
+      span
+        width: 100%
+        margin: 2px 0 0 0
+        text-align: center
+        font-size: 12px
+      @media (max-width: 1099px)
+        span
+          display: none
+    &__fav
+      @media (max-width: 1099px)
+        margin: 0 24px
 
 @keyframes phone-anim
   0%
@@ -65,127 +171,5 @@
     right: 3px
     top: 3px
     opacity: 1
-
-
-.header__phone
-  display: flex
-  align-items: center
-  cursor: pointer
-  &:hover
-    .arrow
-      animation: phone-anim ease-in-out .3s
-    .accent-text
-      color: darken($main, 10%)
-      border-bottom: 2px dotted darken($main, 10%)
-  @media (max-width: 1269px)
-    width: 34px
-    height: 34px
-    display: flex
-    align-items: center
-    justify-content: center
-    background: $main
-    border-radius: 100%
-  @media (max-width: 1099px)
-    margin: 0 24px 0 0
-    order: 3
-  @media (max-width: 599px)
-    margin: 0
-
-
-.header__phone__num
-  margin: 0 0 0 5px
-  span
-    width: 100%
-    display: block
-    font-weight: 600
-    font-size: 0.938rem
-    color: #424242
-  .accent-text
-    width: auto
-    display: inline-block
-    border-bottom: 2px dotted $main
-    color: #FF2012
-  @media (max-width: 1269px)
-    display: none
-
-
-.header__search
-  width: 40%
-  display: flex
-  &--mobile
-    display: none
-  @media (max-width: 1099px)
-    display: none
-    &--mobile
-      width: 100%
-      height: 35px
-      display: flex
-  @media (max-width: 599px)
-    &--mobile
-      height: 30px
-
-
-.header__search__input
-  width: 100%
-  height: 32px
-  padding: 0 15px
-  font-size: 0.938rem
-  border-radius: 20px
-  border: 1px solid #E2E2E2
-  border-top-right-radius: 0
-  border-bottom-right-radius: 0
-  background: #FDFDFD
-  box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.1)
-  box-sizing: border-box
-  outline: none
-  transition: .3s
-  &:hover
-    border: 2px solid #E2E2E2
-  &:focus
-    border: 2px solid $main
-  @media (max-width: 1099px)
-    height: 100%
-
-
-.header__nav
-  min-width: 200px
-  display: flex
-  justify-content: space-between
-  @media (max-width: 1099px)
-    min-width: auto
-    order: 4
-  @media (max-width: 599px)
-    display: none
-
-
-.header__nav__item
-  display: flex
-  align-items: center
-  justify-content: flex-end
-  flex-direction: column
-  cursor: pointer
-  transition: .3s
-  i
-    color: $black
-    font-size: 26px
-    transition: .2s
-  &:hover
-    color: $main
-    i
-      color: $main
-  span
-    width: 100%
-    margin: 2px 0 0 0
-    text-align: center
-    font-size: 12px
-  @media (max-width: 1099px)
-    span
-      display: none
-
-
-.header__nav__fav
-  @media (max-width: 1099px)
-    margin: 0 24px
-
 
 @import header-bottom.sass
