--- a/app/catalog/view/theme/fancy.shop/sass/home/catalog-nav/catalog-nav.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/home/catalog-nav/catalog-nav.sass
@@ -8,73 +8,73 @@
   @media (max-width: 699px)
     grid-template-columns: 1fr
 
-.catalog-nav__link
-  width: 100%
-  padding: 20px
-  display: flex
-  align-items: center
-  justify-content: space-between
-  flex-direction: column
-  min-height: 300px
-  position: relative
-  text-decoration: none
-  border-radius: 10px
-  box-sizing: border-box
-  overflow: hidden
-  &:hover
-    .catalog-nav__img
-      transform: scale(1.1)
-      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95)
-  @media (max-width: 1239px)
-    max-height: 420px
-    min-height: 370px
-  @media (max-width: 599px)
-    min-height: 300px
-    padding: 16px
-
-.catalog-nav__title
-  width: 100%
-  margin: 0
-  color: #FFF
-  font-size: 22px
-  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5)
-  z-index: 9
-
-.catalog-nav__button
-  width: 134px
-  height: 34px
-  margin: 0 auto 0 0
-  color: #FFF
-  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5)
-  line-height: 34px
-  text-align: center
-  border-radius: 5px
-  border: 1px solid #FFFFFF
-  background: none
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5)
-  transition: .2s
-  z-index: 9
-  &:hover
-    color: $black
-    background: #FFF
-    box-shadow: none
-    text-shadow: none
-
-.catalog-nav__img
-  width: 101%
-  height: 101%
-  top: 0
-  left: 0
-  position: absolute
-  transition: 3s
-  @media (max-width: 1199px)
-    width: auto
-    min-width: 520px
-  @media (max-width: 699px)
+  &__link
     width: 100%
-    height: 120%
-    min-height: 100%
-    transition: none
-  @media (max-width: 599px)
-    height: 112%
-    min-width: 460px
+    padding: 20px
+    display: flex
+    align-items: center
+    justify-content: space-between
+    flex-direction: column
+    min-height: 300px
+    position: relative
+    text-decoration: none
+    border-radius: 10px
+    box-sizing: border-box
+    overflow: hidden
+    &:hover
+      .catalog-nav__img
+        transform: scale(1.1)
+        transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95)
+    @media (max-width: 1239px)
+      max-height: 420px
+      min-height: 370px
+    @media (max-width: 599px)
+      min-height: 300px
+      padding: 16px
+
+  &__title
+    width: 100%
+    margin: 0
+    color: #FFF
+    font-size: 22px
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5)
+    z-index: 9
+
+  &__button
+    width: 134px
+    height: 34px
+    margin: 0 auto 0 0
+    color: #FFF
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5)
+    line-height: 34px
+    text-align: center
+    border-radius: 5px
+    border: 1px solid #FFFFFF
+    background: none
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5)
+    transition: .2s
+    z-index: 9
+    &:hover
+      color: $black
+      background: #FFF
+      box-shadow: none
+      text-shadow: none
+
+  &__img
+    width: 101%
+    height: 101%
+    top: 0
+    left: 0
+    position: absolute
+    transition: 3s
+    @media (max-width: 1199px)
+      width: auto
+      min-width: 520px
+    @media (max-width: 699px)
+      width: 100%
+      height: 120%
+      min-height: 100%
+      transition: none
+    @media (max-width: 599px)
+      height: 112%
+      min-width: 460px
