Started to do catalog menu

--- a/app/catalog/view/theme/fancy.shop/sass/common/btn-catalog/btn-catalog.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/common/btn-catalog/btn-catalog.sass
@@ -21,6 +21,7 @@
     bottom: 1px
     position: relative
     font-weight: 600
+    letter-spacing: 0.4px
   @media (max-width: 1099px)
     order: 1
   @media (max-width: 599px)
