--- a/app/catalog/view/theme/fancy.shop/sass/stylesheet.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/stylesheet.sass
@@ -379,6 +379,11 @@ template
 @import common/btn-catalog/btn-catalog
 @import common/btn-search/btn-search
 
+/* import common blocks */
+@import common/catalog/catalog
 @import common/header/header
 @import common/products/products
+@import common/footer/footer
+
+/* import pages*/
 @import home/home
