--- a/app/catalog/view/theme/fancy.shop/template/common/home.twig
+++ b/app/catalog/view/theme/fancy.shop/template/common/home.twig
@@ -202,7 +202,7 @@
                 <div class="flag"></div>
               </span>
             </div>
-            <a class="product-item__img-cont">
+            <a href="" class="product-item__img-cont">
               <img class="product-item__img" src="catalog/view/theme/fancy.shop/img/common/popular/baby-carriage.jpg" alt="">
             </a>
             <h3 class="product-item__title">Bartollino Adbor</h3>
@@ -624,6 +624,17 @@
 
       <div class="for-moms__btn-prev swiper-button-prev fas"></div>
       <div class="for-moms__btn-next swiper-button-next fas"></div>
+    </div>
+
+    <div class="about">
+      <img src="catalog/view/theme/fancy.shop/img/pages/home/shop.jpg" alt="Наш магазин" class="about__img">
+      <div class="about__text">
+        <h4 class="about__title">Fancy.shop - семейный онлайн гипермаркет</h4>
+        <p class="about__p">
+          Онлайн-гипермаркет для счастливых родителей и планирующих! В нашем интернет-магазине детских товаров есть самые популярные игрушки, одежда и обувь мировых брендов, все для будущих мам и новорожденных, включая подгузники и детское питание, огромный выбор детских колясок и автокресел и широкий ассортимент детской мебели – от колыбелей до дизайнерского интерьера детской комнаты, а также товары для обучения и творчества, книги, методики развития, товары для спорта и отдыха и всё для уютного дома.<br><br>
+          Детский онлайн-магазин Fancy.shop быстро доставит заказ в более 300 пунктов выдачи по РФ, выберите пункт выдачи рядом с Вашим домом! Курьерская доставка до двери в более чем 5000 населенных пунктах России.
+        </p>
+      </div>
     </div>
   </div>
 </main>
