--- a/app/catalog/view/theme/fancy.shop/sass/common/header/header-bottom.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/common/header/header-bottom.sass
@@ -1,7 +1,7 @@
 .header-bottom
   height: 32px
   position: relative
-  background: $light-gray
+  background: #a7a7a7
   nav
     height: 100%
   @media (max-width: 1099px)
@@ -84,7 +84,7 @@
       top: 0
       position: absolute
       clip-path: polygon(100% 0, 0 0, 0 100%)
-      background-color: $light-gray
+      background-color: #A7A7A7
       z-index: 9
     &:after
       width: 30px
@@ -95,7 +95,7 @@
       top: 0
       position: absolute
       clip-path: polygon(100% 100%, 100% 0, 0 100%)
-      background-color: $light-gray
+      background-color: #A7A7A7
       z-index: 9
     @media (max-width: 1269px)
       width: 30%
