--- a/app/catalog/view/theme/fancy.shop/sass/home/catalog-nav/catalog-nav.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/home/catalog-nav/catalog-nav.sass
@@ -76,5 +76,5 @@
       min-height: 100%
       transition: none
     @media (max-width: 599px)
-      height: 112%
-      min-width: 460px
+      height: auto
+      min-width: 380px
