--- a/app/catalog/view/theme/fancy.shop/template/common/footer.twig
+++ b/app/catalog/view/theme/fancy.shop/template/common/footer.twig
@@ -1,6 +1,99 @@
-<footer>
-</footer>
-<script src="catalog/view/theme/fancy.shop/js/libs.min.js"></script>
-<script src="catalog/view/theme/fancy.shop/js/common.js"></script>
+  <footer class="footer">
+    <div class="footer__cont">
+      <div class="footer__info">
+        <img class="footer__logo" src="catalog/view/theme/fancy.shop/img/common/logo-white.svg" alt="">
+        <span class="footer__phone"><i class="fad fa-phone"></i>{{ telephone }}</span>
+        <span class="footer__email"><i class="fad fa-envelope"></i>fancy.shop@mail.ru</span>
+        <div class="footer__social">
+          <a href="" class="footer__social__link">
+            <i class="fab fa-vk"></i>
+          </a>
+          <a href="" class="footer__social__link">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="" class="footer__social__link">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__catalog">
+        <h3 class="footer__title">Каталог</h3>
+        <nav>
+          <ul class="footer__catalog-list">
+            <li class="footer__catalog-list__item">
+              <a class="footer__catalog-list__link" href="">Детские коляски</a>
+            </li>
+            <li class="footer__catalog-list__item">
+              <a class="footer__catalog-list__link" href="">Квадрокоптеры и радиоуправляемые игрушки</a>
+            </li>
+            <li class="footer__catalog-list__item">
+              <a class="footer__catalog-list__link" href="">Электроника</a>
+            </li>
+            <li class="footer__catalog-list__item">
+              <a class="footer__catalog-list__link" href="">Товары для дома и интерьера</a>
+            </li>
+            <li class="footer__catalog-list__item">
+              <a class="footer__catalog-list__link" href="">Одежда, обувь и аксессуары</a>
+            </li>
+            <li class="footer__catalog-list__item">
+              <a class="footer__catalog-list__link" href="">Товары для мам и малышей</a>
+            </li>
+            <li class="footer__catalog-list__item">
+              <a class="footer__catalog-list__link" href="">Мягкие игрушки</a>
+            </li>
+            <li class="footer__catalog-list__item">
+              <a class="footer__catalog-list__link" href="">Велосипеды и гироскутеры</a>
+            </li>
+            <li class="footer__catalog-list__item">
+              <a class="footer__catalog-list__link" href="">Конструкторы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <nav class="footer__menu">
+        <h3 class="footer__title">Меню</h3>
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list__item">
+            <a href="" class="footer__menu-list__link">Доставка</a>
+          </li>
+          <li class="footer__menu-list__item">
+            <a href="" class="footer__menu-list__link">Гарантия</a>
+          </li>
+          <li class="footer__menu-list__item">
+            <a href="" class="footer__menu-list__link">О нас</a>
+          </li>
+          <li class="footer__menu-list__item">
+            <a href="" class="footer__menu-list__link">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="footer__feedback">
+        <h3 class="footer__title">Обратная связь</h3>
+        <form class="footer__form">
+          <input class="footer__input" type="text" placeholder="Имя">
+          <input class="footer__input" type="text" placeholder="+7 (___) ___-__-__">
+          <button class="footer__btn btn">Отправить</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <div class="footer-bottom__cont">
+        <p class="footer-bottom__p">
+          Copyright 2019 © Семейный онлайн гипермаркет "fancy.shop". Все права защищены.
+        </p>
+        <p class="footer-bottom__p">
+          <a class="footer-bottom__link" href="">Положение о конфидециальности</a>
+          <a class="footer-bottom__link" href="">Положение о Cookie</a>
+        </p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="catalog/view/theme/fancy.shop/js/libs.min.js"></script>
+  <script src="catalog/view/theme/fancy.shop/js/common.js"></script>
 </body>
 </html>
