--- a/app/catalog/view/theme/fancy.shop/template/product/category.twig
+++ b/app/catalog/view/theme/fancy.shop/template/product/category.twig
@@ -2,9 +2,12 @@
 <div id="product-category" class="container">
   <ul class="breadcrumb">
     {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
+    <li>
+      <a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a>
+    </li>
     {% endfor %}
   </ul>
+
   <div class="row">{{ column_left }}
     {% if column_left and column_right %}
     {% set class = 'col-sm-6' %}
@@ -15,40 +18,35 @@
     {% endif %}
     <div id="content" class="{{ class }}">{{ content_top }}
       <h1>{{ heading_title }}</h1>
-      {% if thumb or description %}
-      <div class="row"> {% if thumb %}
-        <div class="col-sm-2"><img src="{{ thumb }}" alt="{{ heading_title }}" title="{{ heading_title }}" class="img-thumbnail" /></div>
+      <div id="child-cat" class="cat">
+        <div>
+          {% if thumb %}
+          <img src="{{ thumb }}" alt="{{ heading_title }}" title="{{ heading_title }}">
+          {% endif %}
+        </div>
+        {% if categories %}
+        {% if categories|length <= 5 %}
+        <ul class="cat-list">
+          {% for category in categories %}
+          <li class="cat-list__item">
+            <a class="cat-list__link" href="{{ category.href }}">{{ category.name }}</a>
+          </li>
+          {% endfor %}
+        </ul>
+        {% else %}
+        {% for category in categories|batch((categories|length / 4)|round(1, 'ceil')) %}
+        <ul class="cat-list">
+          {% for child in category %}
+          <li class="cat-list__item">
+            <a class="cat-list__link" href="{{ child.href }}">{{ child.name }}</a>
+          </li>
+          {% endfor %}
+        </ul>
+        {% endfor %}
         {% endif %}
-        {% if description %}
-        <div class="col-sm-10">{{ description }}</div>
-        {% endif %}</div>
-      <hr>
-      {% endif %}
-      {% if categories %}
-      <h3>{{ text_refine }}</h3>
-      {% if categories|length <= 5 %}
-      <div class="row">
-        <div class="col-sm-3">
-          <ul id="ul" class="">
-            {% for category in categories %}
-            <li><a href="{{ category.href }}">{{ category.name }}</a></li>
-            {% endfor %}
-          </ul>
-        </div>
+        {% endif %}
       </div>
-      {% else %}
-      <div class="row">{% for category in categories|batch((categories|length / 4)|round(1, 'ceil')) %}
-        <div class="col-sm-3">
-          <ul>
-            {% for child in category %}
-            <li><a href="{{ child.href }}">{{ child.name }}</a></li>
-            {% endfor %}
-          </ul>
-        </div>
-        {% endfor %}</div>
-      <br />
-      {% endif %}
-      {% endif %}
+
       {% if products %}
       <div class="row">
         <div class="col-md-2 col-sm-6 hidden-xs">
