Load category child links on hover

--- a/app/catalog/view/theme/fancy.shop/template/common/menu.twig
+++ b/app/catalog/view/theme/fancy.shop/template/common/menu.twig
@@ -9,7 +9,7 @@
       {% endfor %}
     </ul>
 
-    <div class="catalog-list--full">
+    <div class="catalog-list-full">
     </div>
   </nav>
 </div>
