--- a/app/catalog/view/theme/fancy.shop/sass/common/catalog/catalog.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/common/catalog/catalog.sass
@@ -61,7 +61,7 @@
     &__link
       width: 100%
       height: 100%
-      min-width: 300px
+      min-width: 240px
       display: inline-block
       padding: 12px 16px
       color: #000
@@ -70,17 +70,44 @@
       border-top-left-radius: 22px
       border-bottom-left-radius: 22px
       box-sizing: border-box
-      transition: .2s
+      transition: 0.1s
       &:hover, &:focus, &:active
-        color: $main
-        background: #FFF
-    &--full
+        color: lighten(#000, 40%)
+    .active
+      color: $main
+      background: #FFF
+    &-full
       width: 100%
       height: 100%
+      min-height: 400px
       position: relative
+      &:before
+        width: 80px
+        height: 80px
+        content: ""
+        display: block
+        top: 50%
+        left: 50%
+        margin-top: -60px
+        margin-left: -40px
+        position: absolute
+        background: url("../img/common/preloader.gif") no-repeat
+        background-size: cover
+        background-position: center
+        opacity: 1
+        z-index: 9
+        transition: .2s
+      &--active
+        &:before
+          opacity: 0
       .cat
-        padding: 20px 40px 20px
+        height: 100%
+        max-width: 680px
+        padding: 30px 40px 0
+        position: relative
+        background: #FFF
         column-count: 3
+        z-index: 99
         &-list
           width: 100%
           margin: 0
@@ -91,8 +118,9 @@
             page-break-inside: avoid
             break-inside: avoid
           &__img
-            width: 80px
-            height: 80px
+            width: 70px
+            height: 70px
+            transition: .2s
           &__link
             display: flex
             flex-direction: column
@@ -103,3 +131,9 @@
               color: #000
               font-size: 16px
               font-family: "CeraRoundPro-bold"
+              transition: .2s
+            &:hover, &:focus
+              img
+                transform: scale(1.05)
+              span
+                color: $main
