--- a/app/catalog/view/theme/fancy.shop/template/product/category.twig
+++ b/app/catalog/view/theme/fancy.shop/template/product/category.twig
@@ -16,7 +16,7 @@
     {% else %}
     {% set class = 'col-sm-12' %}
     {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
+    <div id="content">{{ content_top }}
       <h1>{{ heading_title }}</h1>
       <div id="child-cat" class="cat">
         {% if categories %}
