--- a/app/catalog/view/theme/fancy.shop/sass/stylesheet.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/stylesheet.sass
@@ -14,7 +14,6 @@ html
 
 /**
  * Remove the margin in all browsers.
- */
 
 body
   height: 4000px
@@ -183,7 +182,6 @@ button,
 /**
  * Remove the inner border and padding in Firefox.
  */
-
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -376,11 +374,10 @@ template
 
 /* import buttons*/
 @import common/btn/btn
-@import common/btn-catalog/btn-catalog
+@import common/btn-cat/btn-cat
 @import common/btn-search/btn-search
 
 /* import common blocks */
-@import common/catalog/catalog
 @import common/header/header
 @import common/products/products
 @import common/footer/footer
