--- a/app/catalog/view/theme/fancy.shop/template/common/header.twig
+++ b/app/catalog/view/theme/fancy.shop/template/common/header.twig
@@ -83,8 +83,10 @@
           </div>
         </div>
 
-        <button class="btn-catalog">
-          <i class="icon list-icon"></i>
+        <button class="btn-cat">
+          <div class="btn-cat__icon">
+            <i class="icon list-icon"></i>
+          </div>
           <span>каталог</span>
         </button>
 
