--- a/app/catalog/view/theme/fancy.shop/sass/common/header/header__cat.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/common/header/header__cat.sass
@@ -1,10 +1,12 @@
-.catalog
+.header__cat
   width: 100%
-  left: 0
+  display: block
   top: 60px
+  left: 0
   position: absolute
   background: #FFF
   border-top: 1px solid #f1f1f1
+  opacity: 1
   z-index: 999
   &:after
     width: 100%
@@ -28,9 +30,12 @@
     position: absolute
     z-index: 99
     pointer-events: none
+  @media (max-width: 1399px)
+    width: 100%
+    padding: 0 20px
 
   &__cont
-    width: 1320px
+    width: 1180px
     margin: auto
     position: relative
     display: flex
@@ -102,12 +107,17 @@
           opacity: 0
       .cat
         height: 100%
-        max-width: 680px
-        padding: 30px 40px 0
+        display: flex
+        justify-content: space-between
         position: relative
         background: #FFF
-        column-count: 3
         z-index: 99
+
+        &__cont
+          width: 680px
+          padding: 30px 40px 0
+          column-count: 4
+
         &-list
           width: 100%
           margin: 0
@@ -118,8 +128,8 @@
             page-break-inside: avoid
             break-inside: avoid
           &__img
-            width: 70px
-            height: 70px
+            width: 60px
+            height: 60px
             transition: .2s
           &__link
             display: flex
@@ -137,3 +147,36 @@
                 transform: scale(1.05)
               span
                 color: $main
+
+        &-brands
+          padding: 30px 0
+          &-list
+            max-width: 156px
+            margin: 0
+            padding: 0
+            &__item
+              margin: 0 0 30px 0
+              list-style: none
+            &__link
+              width: auto
+              height: 40px
+              display: flex
+              align-items: center
+              justify-content: center
+              text-decoration: none
+              &:hover, &:focus, &:active
+                img
+                  opacity: 0.6
+              img
+                height: 100%
+                opacity: 1
+                transition: .2s
+
+.hidden
+  display: none
+  top: 80px
+.transition.hidden
+  display: block
+  opacity: 0
+.transition
+  transition: .1s ease
