--- a/app/catalog/view/theme/fancy.shop/template/common/menu.twig
+++ b/app/catalog/view/theme/fancy.shop/template/common/menu.twig
@@ -1,16 +1,16 @@
 {% if categories %}
-<div class="catalog">
-  <nav class="catalog__cont">
-    <ul class="catalog-list">
+<div class="header__cat hidden">
+  <div class="header__cat__cont">
+    <ul class="header__cat-list">
       {% for category in categories %}
-      <li class="catalog-list__item">
-        <a class="catalog-list__link" href="{{ category.href }}">{{ category.name }}</a>
+      <li class="header__cat-list__item">
+        <a class="header__cat-list__link" href="{{ category.href }}">{{ category.name }}</a>
       </li>
       {% endfor %}
     </ul>
 
-    <div class="catalog-list-full">
+    <div class="header__cat-list-full">
     </div>
-  </nav>
+  </div>
 </div>
 {% endif %}
