--- a/app/catalog/view/theme/fancy.shop/template/product/category.twig
+++ b/app/catalog/view/theme/fancy.shop/template/product/category.twig
@@ -19,30 +19,57 @@
     <div id="content" class="{{ class }}">{{ content_top }}
       <h1>{{ heading_title }}</h1>
       <div id="child-cat" class="cat">
-        {% if categories %}
-        {% if categories|length <= 5 %}
-        <ul class="cat-list">
-          {% for category in categories %}
-          <li class="cat-list__item">
-            <a class="cat-list__link" href="{{ category.href }}">{{ category.name }}</a>
-          </li>
+        <div class="cat__cont">
+          {% if categories %}
+          {% if categories|length <= 5 %}
+          <ul class="cat-list">
+            {% for category in categories %}
+            <li class="cat-list__item">
+              <a class="cat-list__link" href="{{ category.href }}">{{ category.name }}</a>
+            </li>
+            {% endfor %}
+          </ul>
+          {% else %}
+          {% for category in categories|batch((categories|length / 4)|round(1, 'ceil')) %}
+          <ul class="cat-list">
+            {% for child in category %}
+            <li class="cat-list__item">
+              <a class="cat-list__link" href="{{ child.href }}">
+                <img class="cat-list__img" src="{{ child.thumb }}" alt="{{ heading_title }}" title="{{ heading_title }}">
+                <span>{{ child.name }}</span>
+              </a>
+            </li>
+            {% endfor %}
+          </ul>
           {% endfor %}
-        </ul>
-        {% else %}
-        {% for category in categories|batch((categories|length / 4)|round(1, 'ceil')) %}
-        <ul class="cat-list">
-          {% for child in category %}
-          <li class="cat-list__item">
-            <a class="cat-list__link" href="{{ child.href }}">
-              <img class="cat-list__img" src="{{ child.thumb }}" alt="{{ heading_title }}" title="{{ heading_title }}">
-              <span>{{ child.name }}</span>
-            </a>
-          </li>
-          {% endfor %}
-        </ul>
-        {% endfor %}
-        {% endif %}
-        {% endif %}
+          {% endif %}
+          {% endif %}
+        </div>
+
+        <div class="cat-brands">
+          <ul class="cat-brands-list">
+            <li class="cat-brands-list__item">
+              <a href="" class="cat-brands-list__link">
+                <img src="catalog/view/theme/fancy.shop/img/common/header/cat/brands/apple-logo.svg" alt="">
+              </a>
+            </li>
+            <li class="cat-brands-list__item">
+              <a href="" class="cat-brands-list__link">
+                <img src="catalog/view/theme/fancy.shop/img/common/header/cat/brands/xiaomi-logo.svg" alt="">
+              </a>
+            </li>
+            <li class="cat-brands-list__item">
+              <a href="" class="cat-brands-list__link">
+                <img src="catalog/view/theme/fancy.shop/img/common/header/cat/brands/samsung-logo.svg" alt="">
+              </a>
+            </li>
+            <li class="cat-brands-list__item">
+              <a href="" class="cat-brands-list__link">
+                <img src="catalog/view/theme/fancy.shop/img/common/header/cat/brands/huawei-logo.svg" alt="">
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
 
       {% if products %}
