Add animation for catalog menu

--- a/app/catalog/view/theme/fancy.shop/template/common/menu.twig
+++ b/app/catalog/view/theme/fancy.shop/template/common/menu.twig
@@ -1,5 +1,5 @@
 {% if categories %}
-<div class="catalog">
+<div class="catalog hidden">
   <nav class="catalog__cont">
     <ul class="catalog-list">
       {% for category in categories %}
