--- a/app/catalog/view/theme/fancy.shop/sass/common/btn-catalog/btn-catalog.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/common/btn-catalog/btn-catalog.sass
@@ -12,16 +12,20 @@
   color: #FFF
   text-shadow: 0px 1px 2px #00000078
   cursor: pointer
+  outline: none
   transition: .2s
   &:hover
-    background: darken($main, 10%)
+    background: darken($main, 8%)
+    box-shadow: inset -3px 8px 12px 0px #0000001f
   i
     font-size: 24px
+    pointer-events: none
   span
     bottom: 1px
     position: relative
     font-weight: 600
     letter-spacing: 0.4px
+    pointer-events: none
   @media (max-width: 1099px)
     order: 1
   @media (max-width: 599px)
