--- a/app/catalog/view/theme/fancy.shop/sass/common/catalog/catalog.sass
+++ b/app/catalog/view/theme/fancy.shop/sass/common/catalog/catalog.sass
@@ -1,10 +1,12 @@
 .catalog
   width: 100%
-  left: 0
+  display: block
   top: 60px
+  left: 0
   position: absolute
   background: #FFF
   border-top: 1px solid #f1f1f1
+  opacity: 1
   z-index: 999
   &:after
     width: 100%
@@ -102,7 +104,7 @@
           opacity: 0
       .cat
         height: 100%
-        max-width: 680px
+        max-width: 500px
         padding: 30px 40px 0
         position: relative
         background: #FFF
@@ -118,8 +120,8 @@
             page-break-inside: avoid
             break-inside: avoid
           &__img
-            width: 70px
-            height: 70px
+            width: 60px
+            height: 60px
             transition: .2s
           &__link
             display: flex
@@ -137,3 +139,12 @@
                 transform: scale(1.05)
               span
                 color: $main
+
+.hidden
+  display: none
+  top: 80px
+.transition.hidden
+  display: block
+  opacity: 0
+.transition
+  transition: .1s ease
